Small css change

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -806,7 +806,6 @@ nav#navbar-default1 {
 
 nav#navbar-default1.navbar-default {
   background: white;
-  box-shadow: none;
   transition: all 0.3s ease-in-out;
   position: fixed;
   top: 0px;
@@ -1564,6 +1563,7 @@ label {
   border-radius: 0;
   padding: 5px 10px;
   margin: 10px 8.3px;
+  border: 2px solid transparent;
 }
 .main-menu > li:hover {
   border: 2px solid white;
@@ -1609,8 +1609,8 @@ label {
   margin-left: -11px;
   width: 200px;
 }
-.checked {
-  border: 3px solid white;
+.main-menu > li.checked {
+  border: 2px solid white;
 }
 .filter-bar-icons {
   width: 50px;
