--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -76,6 +76,10 @@ body {
   justify-content: space-between;
 }
 
+.space-around {
+  justify-content: space-around;
+}
+
 .end {
   justify-content: flex-end;
 }
@@ -687,11 +691,54 @@ body.modal-open {
   background-size: contain;
 }
 
+.popup-curved {
+  display: none;
+  position: absolute;
+  left: calc(50% - 45px);
+  z-index: 9;
+  top: 16.4px;
+  height: 45px;
+  width: 90px;
+  border-radius: 0 0 90px 90px;
+  background: #fff;
+  border-width: 0 2px 2px 2px;
+  border-style: solid;
+  border-color: #bfbfbf;
+  box-sizing: border-box;
+}
+
+.popup-curved-img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: -35px auto;
+  padding: 15px;
+  background: #0d6490 no-repeat center center;
+  background-size: 40px;
+  box-sizing: border-box;
+}
+
+.popup-curved-carry-out:before {
+  content: url(../images/carry_out_store_white.svg);
+}
+
+.curved-border {
+  margin-top: 20px;
+}
+
 .popup-content {
   background: url(../images/box-middle.png) repeat top left;
   background-size: contain;
   padding: 20px 40px 10px;
   min-height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.popup-content > .modal-content-wrapper {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -711,6 +758,75 @@ body.modal-open {
 .popup-content form {
   width: 84%;
   margin-top: 25px;
+}
+
+.popup-content #deliveryModal h3,
+.popup-content #restaurantModal h3 {
+  width: 370px;
+  padding: 0px 30px;
+  box-sizing: border-box;
+}
+
+.modal-image-container {
+  width: 85%;
+}
+
+.delivery-choice {
+  cursor: pointer;
+  width: 203px;
+  height: 203px;
+  border: 2px dotted #ebebeb;
+  border-radius: 50%;
+  padding: 24px 20px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  color: #0d6490;
+  max-height: 203px;
+  box-sizing: border-box;
+}
+
+.delivery-choice span {
+  letter-spacing: 2px;
+}
+
+.delivery-choice div.img {
+  width: 102px;
+  height: 102px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.delivery-choice div#delivery-img {
+  background-image: url(../images/delivery_bike.svg);
+}
+
+.delivery-choice div#takeout-img {
+  background-image: url(../images/carry_out_store.svg);
+}
+
+#restaurantModal .form-group {
+  width: 100%;
+}
+
+#restaurantModal .select-wrapper select {
+  width: 100%;
+  height: 48px;
+  background-color: #f2f4f5;
+  cursor: pointer;
+  background: #f2f4f5 url(../images/select_icon.png) 96% center no-repeat;
+  appearance: none;
+  border: 1px solid #e3e4e5;
+  padding: 0 10px;
+  font-size: 17px;
+  color: #555;
+}
+
+#restaurantModal .select-wrapper select:focus {
+  outline: none;
+}
+
+#restaurantModal .select-wrapper select option {
+  font-size: 17px;
 }
 
 #remember-pass-wrapper {
@@ -1568,12 +1684,12 @@ label {
 .main-menu > li:hover {
   border: 2px solid white;
 }
-.main-menu >li >a{
+.main-menu > li > a {
   display: flex;
   flex-direction: column;
 }
-.main-menu >li >a>span{
-   text-align: center;
+.main-menu > li > a > span {
+  text-align: center;
 }
 
 #filter-bar {
@@ -1762,13 +1878,12 @@ label {
     max-width: 100%;
   }
   /* menu */
-  .main-menu{
+  .main-menu {
     flex-wrap: wrap;
   }
-  .filter-bar-icons{
+  .filter-bar-icons {
     display: block;
   }
-
 }
 
 @media screen and (max-width: 990px) {
@@ -1864,6 +1979,32 @@ label {
     grid-row: 5/6;
   }
 
+  .popup-curved {
+    top: 20.4px;
+  }
+
+  .popup-content #deliveryModal h3,
+  .popup-content #restaurantModal h3 {
+    width: 90%;
+    padding: 0px 30px;
+    box-sizing: border-box;
+  }
+
+  .modal-image-container {
+    width: 95%;
+  }
+
+  .delivery-choice {
+    width: 175px;
+    height: 175px;
+  }
+
+  .delivery-choice span {
+    display: block;
+    font-size: 14px;
+    padding: 0px 10px;
+  }
+
   .black-card > img {
     display: none;
   }
@@ -1888,6 +2029,31 @@ label {
     max-width: 90%;
   }
 
+  .popup-curved {
+    border-color: transparent;
+    background-color: transparent;
+  }
+
+  .delivery-choice {
+    height: 0;
+    padding: 0;
+    padding-bottom: 42%;
+    width: 42%;
+  }
+
+  .delivery-choice div.img {
+    width: 55%;
+    height: 0;
+    padding-bottom: 55%;
+    padding-top: 20%;
+  }
+
+  .delivery-choice span {
+    position: relative;
+    top: -10px;
+    font-size: 12px;
+  }
+
   .white-button,
   .black-button {
     width: 70%;
@@ -1898,5 +2064,16 @@ label {
   .white-button,
   .black-button {
     width: 85%;
+  }
+
+  .modal-image-container {
+    flex-direction: column;
+  }
+
+  .delivery-choice {
+    height: 0;
+    padding: 0;
+    padding-bottom: 70%;
+    width: 70%;
   }
 }
