Added filter-menu design

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1550,7 +1550,6 @@ label {
 .main-menu {
   display: flex;
   justify-content: center;
-  /* padding: 30px 0; */
 }
 .main-menu > li > a > span {
   font-family: "Open Sans Condensed", sans-serif;
@@ -1568,17 +1567,39 @@ label {
 .main-menu > li:hover {
   border: 2px solid white;
 }
-.main-menu >li >a{
+.main-menu > li > a {
   display: flex;
   flex-direction: column;
 }
-.main-menu >li >a>span{
-   text-align: center;
+.main-menu > li > a > span {
+  text-align: center;
 }
 
-#filter-bar {
+#filter-bar,
+.filter-category {
   background-color: rgba(111, 64, 9, 0.3);
   text-shadow: 1px 1px 2px rgb(0 0 0 / 20%);
+}
+.filter-category {
+  padding: 15px 300px;
+}
+.filter-container {
+  display: flex;
+  justify-content: flex-start;
+  border-top: 2px solid #fff;
+}
+.filter{
+  margin: 5px 20px;
+}
+.filter > label{
+  color:white;
+}
+ .filter >input{
+  border: 1px solid white;
+  background-color: transparent;
+}
+.filter > input{
+  cursor: pointer;
 }
 .menu-container {
   margin-right: auto;
@@ -1633,6 +1654,9 @@ label {
   }
   .card-container {
     grid-template-columns: repeat(auto-fill, 220px);
+  }
+  .filter-category{
+    display: none;
   }
 }
 
@@ -1762,13 +1786,12 @@ label {
     max-width: 100%;
   }
   /* menu */
-  .main-menu{
+  .main-menu {
     flex-wrap: wrap;
   }
-  .filter-bar-icons{
+  .filter-bar-icons {
     display: block;
   }
-
 }
 
 @media screen and (max-width: 990px) {
