--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -376,19 +376,22 @@ div#appLink {
   margin-top: 25px;
 }
 
-.simple-card .slide-up .weight-container img {
-  width: 45px;
-  height: 45px;
-  padding: 4px;
+.simple-card .slide-up .weight-container .weight-center {
+  width: 37px;
+  height: 37px;
+  margin: 4px;
   box-sizing: border-box;
+  background-image: url(../images/weight.svg);
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .simple-card .slide-up .weight-container .weight {
-  position: absolute;
   text-align: center;
   color: white;
-  left: 45%;
-  bottom: 10px;
+  padding-top: 10px;
   font-size: 9px;
 }
 
@@ -416,7 +419,7 @@ div#appLink {
   color: #0073aa;
 }
 
-.simple-card .slide-up .quantity-wrapper {
+.quantity-wrapper {
   height: 26px;
   margin-top: 10px;
   display: flex;
@@ -424,11 +427,11 @@ div#appLink {
   align-items: center;
 }
 
-.simple-card .slide-up .quantity-wrapper .quantity-number {
+.quantity-wrapper .quantity-number {
   font-size: 20px;
 }
 
-.simple-card .slide-up .quantity-controller {
+.quantity-controller {
   width: 25px;
   height: 25px;
   padding: 4px;
