--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -489,6 +489,79 @@ div#appLink {
   height: 180px;
 }
 
+#checkoutPage {
+  background-color: white;
+}
+
+.basket-header {
+  display: grid;
+  grid-template-columns: 17% 34% 17% 17% 15%;
+  grid-template-rows: 1fr;
+  text-align: center;
+}
+
+#product-header {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+#quantity-header {
+  grid-column: 3/4;
+  grid-row: 1/2;
+}
+
+#price-header {
+  grid-column: 4/5;
+  grid-row: 1/2;
+}
+
+.cart-item-container {
+  width: 100%;
+}
+
+.cart-item {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 17% 34% 17% 17% 15%;
+  grid-template-rows: auto;
+  align-items: center;
+}
+
+.cart-item .image-container {
+  grid-column: 1/2;
+}
+
+.cart-item .image-container img {
+  width: 100%;
+}
+
+.cart-item .details-container {
+  grid-column: 2/3;
+}
+
+.cart-item .quantity-wrapper {
+  grid-column: 3/4;
+}
+
+.cart-item .price-container {
+  grid-column: 4/5;
+  text-align: center;
+}
+
+.cart-item .x-container {
+  grid-column: 5/6;
+}
+
+.x-container .remove-x{
+  width: 25px;
+    height: 25px;
+    margin: 0 5px;
+    border-radius: 50%;
+    background-color: transparent;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
 #registrationPage {
   background: white;
 }
