--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1588,17 +1588,17 @@ label {
   justify-content: flex-start;
   border-top: 2px solid #fff;
 }
-.filter{
+.filter {
   margin: 5px 20px;
 }
-.filter > label{
-  color:white;
+.filter > label {
+  color: white;
 }
- .filter >input{
+.filter > input {
   border: 1px solid white;
   background-color: transparent;
 }
-.filter > input{
+.filter > input {
   cursor: pointer;
 }
 .menu-container {
@@ -1638,6 +1638,43 @@ label {
   height: 50px;
   display: none;
 }
+.delivery-carryout_icons {
+  width: 25px;
+  height: 40px;
+  vertical-align: middle;
+}
+.deals-image {
+  width: 100%;
+  margin: 0px;
+  height: 180px;
+  margin-top: -10px;
+  border-radius: 4px;
+  height: 142px;
+}
+.offer-ribbon {
+  width: 150px;
+  height: 36px;
+  text-align: center;
+  margin: 15px 0 0 0;
+}
+.title-wrapper-deals {
+  height: 100px;
+  max-height: 60px;
+  color: #0073aa;
+  font-weight: 700;
+  font-family: 'Open Sans Condensed', sans-serif;
+}
+.delivery-carryout{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+.deal-dc{
+  color: #0073aa;
+  font-size: 14px;
+  text-align: center;
+}
 
 @media screen and (max-width: 1250px) {
   .main-wrapper {
@@ -1655,7 +1692,7 @@ label {
   .card-container {
     grid-template-columns: repeat(auto-fill, 220px);
   }
-  .filter-category{
+  .filter-category {
     display: none;
   }
 }
