--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1662,18 +1662,47 @@ label {
   max-height: 60px;
   color: #0073aa;
   font-weight: 700;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
+  border-bottom: 2px solid #d7d7d7;
+  margin: 10px;
 }
-.delivery-carryout{
+.delivery-carryout {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   cursor: pointer;
+  border-top: 1px solid #d7d7d7;
 }
-.deal-dc{
+.deal-dc {
   color: #0073aa;
   font-size: 14px;
   text-align: center;
+}
+.card-container-deal {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 226px);
+  grid-template-rows: repeat(auto-fill, 521px);
+  justify-content: center;
+  gap: 15px;
+}
+.card-container-deal .card {
+  width: 100%;
+  height: 521px;
+  padding: 10px 0px;
+  box-sizing: border-box;
+  background-color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  transition: transform 0.1s;
+  box-shadow: 0 2px 6px rgb(0 0 0 / 20%);
+}
+#deals-button{
+  margin: 0 10px;
+  padding-top: 10px;
+  border-top: 0px solid #d7d7d7;
 }
 
 @media screen and (max-width: 1250px) {
