--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1699,10 +1699,44 @@ label {
   transition: transform 0.1s;
   box-shadow: 0 2px 6px rgb(0 0 0 / 20%);
 }
-#deals-button{
+#deals-button {
   margin: 0 10px;
   padding-top: 10px;
   border-top: 0px solid #d7d7d7;
+}
+.deals-card {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 100%;
+}
+.first-deals > h1 {
+  text-align: center;
+  padding: 20px 0;
+  color: #fff;
+  font-weight: 700;
+  font-size: 2.3em;
+}
+.deal-flex {
+  display: flex;
+  height: 500px;
+  padding-bottom: 0%;
+}
+.deal {
+  background-color: white;
+  margin: 10px;
+  width: 300px;
+}
+#deal-btn {
+  width: 100%;
+}
+.card .rounded .complex-card .deals-card {
+  position: relative;
+}
+.delivery-carryout > div {
+  margin: 0 5px;
 }
 
 @media screen and (max-width: 1250px) {
@@ -1857,6 +1891,11 @@ label {
   }
   .filter-bar-icons {
     display: block;
+  }
+  .deal-flex {
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
   }
 }
 
