--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -2175,6 +2175,9 @@ label {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  border-width: 20px 0 30px 20px;
+  border-right-color: #ebebeb;
+  border-right-style: solid;
 }
 .stepper-icon-wrapper {
   display: inline-block;
@@ -2188,6 +2191,16 @@ label {
   margin-left: 5px;
   font-size: 13px;
   letter-spacing: 0.5px;
+  margin-right: 30px;
+}
+.stepper-icon-wrapper:before {
+  content: url(/assets/images/green_check.svg);
+  position: absolute;
+  display: block;
+  width: 15px;
+  height: 15px;
+  bottom: 0;
+  right: -4px;
 }
 
 @media screen and (max-width: 1250px) {
