Small CSS refactoring

--- a/assets/script/views/checkoutPage.hbs
+++ b/assets/script/views/checkoutPage.hbs
@@ -41,5 +41,5 @@
 </div>
 
 <div class="order-btn-container">
-    <button id="checkOutBtn" class="button red-btn text-center rounded">ЗАВЪРШЕТЕ ПОРЪЧКАТА СИ</button>
+    <button id="checkOutBtn" class="button red-btn text-center rounded text-white">ЗАВЪРШЕТЕ ПОРЪЧКАТА СИ</button>
 </div>
