--- a/assets/script/views/simpleProduct.hbs
+++ b/assets/script/views/simpleProduct.hbs
@@ -72,9 +72,9 @@
             <div class="card-quantity">
                 <p>КОЛИЧЕСТВО</p>
                 <div class="quantity-wrapper">
-                    <img class="minus quantity-controller" alt="minus" src="assets/images/minus.svg">
+                    <img class="minus quantity-controller pointer" alt="minus" src="assets/images/minus.svg">
                     <span class="quantity-number">1</span>
-                    <img class="plus quantity-controller" alt="plus" src="assets/images/plus.svg">
+                    <img class="plus quantity-controller pointer" alt="plus" src="assets/images/plus.svg">
                 </div>
             </div>
             <div class="card-price">
