--- a/assets/script/views/checkoutPreview.hbs
+++ b/assets/script/views/checkoutPreview.hbs
@@ -15,9 +15,9 @@
                 {{{printProductDetails this.prod}}}
             </div>
             <div class="quantity-wrapper">
-                <img class="minus quantity-controller" alt="minus" src="./assets/images/minus.svg">
+                <img class="minus quantity-controller pointer" alt="minus" src="./assets/images/minus.svg">
                 <span class="quantity-number">{{this.quantity}}</span>
-                <img class="plus quantity-controller" alt="plus" src="./assets/images/plus.svg">
+                <img class="plus quantity-controller pointer" alt="plus" src="./assets/images/plus.svg">
             </div>
             <div class="price-container" data-price="{{getPricePerUnit this}}">{{getProductFinalPrice this}}лв</div>
             <div class="x-container">
